--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/custAptList"
-    android:name="com.example.servicetech.CustomerScheduleFragment"
+    android:name="com.example.servicetech.ItemFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".CustomerScheduleFragment"
-    tools:listitem="@layout/customer_schedule_item" />
+    tools:context=".CompleteFragment"
+    />
