--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -16,26 +16,20 @@
         android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
         android:text="View Appointments"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/event_type_lv"
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/event_type_v"
         android:layout_width="198dp"
-        android:layout_height="46dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/view_event"
-        app:layout_constraintTop_toBottomOf="@+id/view_tv">
-
-        <EditText
-            android:id="@+id/event_type_v"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:hint="Event type" />
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintTop_toBottomOf="@+id/view_tv"
+        android:hint="Event type" />
 
     <Button
         android:id="@+id/view_event"
@@ -43,8 +37,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="Get Appointments"
-        app:layout_constraintLeft_toRightOf="@+id/event_type_lv"
+        android:text="Get"
+        app:layout_constraintLeft_toRightOf="@+id/event_type_v"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_tv" />
 
