--- a/app/src/main/res/layout/view_event_item.xml
+++ b/app/src/main/res/layout/view_event_item.xml
@@ -6,59 +6,65 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".TechnicianActivity">
+
     <TextView
         android:id="@+id/name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Item Name"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/serviceType_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Service"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/name_tv"
-        />
+        app:layout_constraintTop_toBottomOf="@id/name_tv" />
 
     <TextView
         android:id="@+id/place_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Location"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/serviceType_tv" />
+
     <TextView
         android:id="@+id/start_time_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Start Time"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/place_tv" />
 
     <Button
-        android:id="@+id/edit_event_b"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minWidth="0dp"
-        android:minHeight="0dp"
-        android:text="Update"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/att_event"
-        app:layout_constraintTop_toBottomOf="@+id/start_time_tv" />
-
-    <Button
-        android:id="@+id/att_event"
+        android:id="@+id/attendT"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minWidth="0dp"
         android:minHeight="0dp"
         android:text="Attend"
-        app:layout_constraintLeft_toRightOf="@+id/edit_event_b"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/viewAptB"
+        app:layout_constraintTop_toBottomOf="@+id/start_time_tv" />
+
+    <Button
+        android:id="@+id/viewAptB"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="0dp"
+        android:minHeight="0dp"
+        android:text="View Details"
+        app:layout_constraintLeft_toRightOf="@+id/attendT"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/start_time_tv" />
 </androidx.constraintlayout.widget.ConstraintLayout>
