--- a/app/src/main/res/layout/object_card.xml
+++ b/app/src/main/res/layout/object_card.xml
@@ -47,35 +47,19 @@
             android:layout_below="@id/itemObj"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
-            android:layout_toLeftOf="@id/locationObj"
             android:layout_toRightOf="@id/photoObj"
             android:text="Service"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
         <TextView
             android:id="@+id/locationObj"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/itemObj"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="5dp"
-            android:gravity="right"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:text="Location"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/recObj"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_20dp"
+            android:layout_height="wrap_content"
             android:layout_below="@id/serviceObj"
-            android:layout_marginTop="5dp"
             android:layout_toRightOf="@id/photoObj"
+            android:layout_marginTop="5dp"
             android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:text="Technician Recommendations"
+            android:text="Location"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textStyle="bold" />
 
@@ -83,7 +67,7 @@
             android:id="@+id/dateObj"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/recObj"
+            android:layout_below="@id/locationObj"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:layout_toRightOf="@id/photoObj"
@@ -95,7 +79,7 @@
             android:id="@+id/timeObj"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/recObj"
+            android:layout_below="@id/locationObj"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="5dp"
             android:layout_toRightOf="@id/dateObj"
@@ -108,7 +92,7 @@
             style="@android:style/Widget.Material.Light.Button.Inset"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:layout_below="@id/recObj"
+            android:layout_below="@id/locationObj"
             android:layout_alignParentRight="true"
             android:insetTop="0dp"
             android:insetBottom="0dp"
