--- a/app/src/main/res/layout/fragment_new.xml
+++ b/app/src/main/res/layout/fragment_new.xml
@@ -19,6 +19,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
+            android:layout_marginTop="2dp"
             android:layout_marginEnd="24dp"
             android:text="Request a service"
             android:textAlignment="center"
@@ -34,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="4dp"
             android:hint="Item Name"
             android:inputType="textPersonName"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
@@ -60,12 +61,12 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/item_type_la"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
 
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="4dp"
             android:hint="Installation, Repair, Maintenance or Upgrade"
             android:inputType="text"
             app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
@@ -78,9 +79,9 @@
             android:id="@+id/relativeLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dimen_40dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="@dimen/dimen_40dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="32dp"
             android:layout_marginBottom="4dp"
             app:layout_constraintBottom_toTopOf="@+id/loc_el"
             app:layout_constraintEnd_toEndOf="parent"
@@ -103,13 +104,13 @@
             <ImageView
                 android:id="@+id/itm_img"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="152dp"
                 android:layout_below="@+id/txt"
-                android:layout_marginTop="0dp"
+                android:layout_marginTop="-2dp"
                 android:adjustViewBounds="true"
-                android:background="@drawable/ic_baseline_image_24"
                 android:contentDescription="TODO"
-                android:cropToPadding="true" />
+                android:cropToPadding="true"
+                app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24" />
 
             <ImageButton
                 android:id="@+id/img_plus"
@@ -118,14 +119,14 @@
                 android:layout_alignBottom="@id/itm_img"
                 android:layout_alignParentEnd="true"
                 android:layout_marginBottom="2dp"
-                android:background="@drawable/ic_baseline_add_circle_outline_24"
-                android:contentDescription="TODO" />
+                android:contentDescription="TODO"
+                android:src="@drawable/ic_baseline_add_circle_outline_24" />
         </RelativeLayout>
 
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/loc_el"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="4dp"
@@ -141,7 +142,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/notewrap"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="4dp"
