--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,98 +8,108 @@
     tools:context=".MainActivity">
 
 
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/intro"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/servtech_logo_400x400" />
+  <ImageView
+      android:id="@+id/logo"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:layout_gravity="center"
+      android:layout_marginStart="24dp"
+      android:layout_marginTop="8dp"
+      android:layout_marginEnd="24dp"
+      android:layout_marginBottom="2dp"
+      app:layout_constraintBottom_toTopOf="@+id/intro"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@drawable/servtech_logo_400x400" />
 
-    <TextView
-        android:id="@+id/intro"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:text="@string/catch_phrase"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@id/aluta"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo"
-        tools:visibility="visible" />
+  <TextView
+      android:id="@+id/intro"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="24dp"
+      android:layout_marginTop="2dp"
+      android:layout_marginEnd="24dp"
+      android:layout_marginBottom="4dp"
+      android:text="@string/catch_phrase"
+      android:textAlignment="center"
+      android:textAllCaps="false"
+      android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+      android:textColor="@color/black"
+      android:textSize="24sp"
+      android:visibility="visible"
+      app:layout_constraintBottom_toTopOf="@id/aluta"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/logo"
+      tools:visibility="visible" />
 
-    <Button
-        android:id="@+id/customer"
-        android:layout_width="0dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:text="Customer"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/join"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/aluta"
-        app:rippleColor="#3F51B5" />
+  <Button
+      android:id="@+id/customer"
+      android:layout_width="0dp"
+      android:layout_height="90dp"
+      android:layout_marginStart="24dp"
+      android:layout_marginTop="4dp"
+      android:layout_marginEnd="24dp"
+      android:layout_marginBottom="4dp"
+      android:backgroundTint="#3949AB"
+      android:text="Customer"
+      android:textAlignment="center"
+      app:layout_constraintBottom_toTopOf="@+id/join"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/aluta"
+      app:rippleColor="#43ECE6" />
 
-    <Button
-        android:id="@+id/technician"
-        android:layout_width="0dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="8dp"
-        android:text="Technician"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/join"
-        app:rippleColor="#009688" />
+  <Button
+      android:id="@+id/technician"
+      android:layout_width="0dp"
+      android:layout_height="90dp"
+      android:layout_marginStart="24dp"
+      android:layout_marginTop="4dp"
+      android:layout_marginEnd="24dp"
+      android:layout_marginBottom="24dp"
+      android:text="Technician"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/join"
+      app:rippleColor="#009688" />
 
-    <TextView
-        android:id="@+id/join"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:text="Or a:"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        app:layout_constraintBottom_toTopOf="@+id/technician"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/customer" />
+  <TextView
+      android:id="@+id/join"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="24dp"
+      android:layout_marginTop="4dp"
+      android:layout_marginEnd="24dp"
+      android:layout_marginBottom="4dp"
+      android:text="Or a:"
+      android:textAlignment="center"
+      android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+      app:layout_constraintBottom_toTopOf="@+id/technician"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/customer" />
 
-    <TextView
-        android:id="@+id/aluta"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:text="@string/continua"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        app:layout_constraintBottom_toTopOf="@+id/customer"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/intro" />
+  <TextView
+      android:id="@+id/aluta"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="24dp"
+      android:layout_marginTop="4dp"
+      android:layout_marginEnd="24dp"
+      android:layout_marginBottom="4dp"
+      android:text="@string/continua"
+      android:textAlignment="center"
+      android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+      app:layout_constraintBottom_toTopOf="@+id/customer"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/intro" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
