--- a/app/src/main/res/layout/fragment_new.xml
+++ b/app/src/main/res/layout/fragment_new.xml
@@ -19,8 +19,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="3dp"
             android:layout_marginEnd="24dp"
+            android:layout_marginBottom="2dp"
             android:text="Request a service"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
@@ -34,10 +35,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
+            android:layout_marginTop="3dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="4dp"
             android:hint="Item Name"
-            android:inputType="textPersonName"
+            android:inputType="text"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_constraintBottom_toTopOf="@+id/pss"
             app:layout_constraintEnd_toEndOf="parent"
@@ -79,9 +81,9 @@
             android:id="@+id/relativeLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="4dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginEnd="40dp"
             android:layout_marginBottom="4dp"
             app:layout_constraintBottom_toTopOf="@+id/loc_el"
             app:layout_constraintEnd_toEndOf="parent"
@@ -90,35 +92,34 @@
 
             <TextView
                 android:id="@+id/txt"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"
                 android:text="Load Item Image"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
             <ImageView
                 android:id="@+id/itm_img"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="152dp"
                 android:layout_below="@+id/txt"
+                android:layout_centerInParent="true"
                 android:layout_marginTop="-2dp"
                 android:adjustViewBounds="true"
                 android:contentDescription="TODO"
                 android:cropToPadding="true"
-                app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24" />
+                app:srcCompat="@drawable/ic_baseline_image_24" />
 
             <ImageButton
                 android:id="@+id/img_plus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignRight="@id/itm_img"
                 android:layout_alignBottom="@id/itm_img"
-                android:layout_alignParentEnd="true"
-                android:layout_marginBottom="2dp"
+                android:layout_alignParentEnd="false"
                 android:contentDescription="TODO"
                 android:src="@drawable/ic_baseline_add_circle_outline_24" />
         </RelativeLayout>
@@ -148,8 +149,8 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="4dp"
-            android:hint="Notes for the technician"
-            android:inputType="textMultiLine"
+            android:hint="A Note for the technician"
+            android:inputType="text"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_constraintBottom_toTopOf="@+id/submit"
             app:layout_constraintEnd_toEndOf="parent"
